# vote-midias-django

./: manage.py  pyproject.toml
core/: context_processors.py
core/templates/core/: base.html  home.html
core/templates/core/partials/: _footer.html  _navbar.html
medias/: admin.py  models.py  urls.py  views.py
medias/migrations/: 0001_initial.py  0002_media_created_at.py
medias/templates/medias/: index.html  medias.html
static/: style.css
static/js/: main.js
votemidias/: asgi.py  settings.py  urls.py  wsgi.py
votes/: admin.py  models.py  urls.py  views.py
votes/migrations/: 0001_initial.py
