[project]
name = "vote-midias-django"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argon2-cffi>=25.1.0",
    "d>=0.2.2",
    "django>=5.2.5",
    "psycopg[binary]>=3.2.9",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=6.0.0",
    "python-dotenv",
]
